Bug 67124 - Systray icon corruption for some applications
Summary: Systray icon corruption for some applications
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-20 18:47 UTC by FBrown
Modified: 2013-07-20 21:41 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Corrupted dropbox and thunderbird icons (17.04 KB, image/png)
2013-07-20 18:47 UTC, FBrown
no flags Details
xorg log (20.88 KB, text/plain)
2013-07-20 19:16 UTC, FBrown
no flags Details

Description FBrown 2013-07-20 18:47:44 UTC
Created attachment 82741 [details]
Corrupted dropbox and thunderbird icons

Bisected to commit: 6921abd81017c9ed7f3b2413784068fbc609a0ea (sna: Add a fast path for the most common fallback for CPU-CPU blits)

Selected KDE systray icons show corruption with the above commit (see attached). 

System: ubuntu raring with xorg-edgers ppa, and locally compiled intel driver from git with sna enabled.
Comment 1 Chris Wilson 2013-07-20 19:01:19 UTC
What hw? (Just attach the Xorg.0.log please.)
Comment 2 Chris Wilson 2013-07-20 19:02:11 UTC
And it would be useful to check against

commit f39d9ed0929f83e65dde8da8f03fae6ba8264e4a
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Jul 20 18:08:22 2013 +0100

    sna: Correct typo in checking src extents before performing memcpy
Comment 3 FBrown 2013-07-20 19:16:00 UTC
Created attachment 82742 [details]
xorg log

Xorg log
Comment 4 FBrown 2013-07-20 19:16:52 UTC
(In reply to comment #2)
> And it would be useful to check against
> 
> commit f39d9ed0929f83e65dde8da8f03fae6ba8264e4a
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Sat Jul 20 18:08:22 2013 +0100
> 
>     sna: Correct typo in checking src extents before performing memcpy

Will recompile with latest commits and report back.
Comment 5 FBrown 2013-07-20 19:40:00 UTC
Tested with:

commit	f39d9ed0929f83e65dde8da8f03fae6ba8264e4a
sna: Correct typo in checking src extents before performing memcpy

and then

commit	b27b1654145c62493614dd7545dcd9fe6936750e
sna: Relax assertion that CPU syncs are performed on reffed objects

Icon corruption still present in both cases
Comment 6 Chris Wilson 2013-07-20 19:57:36 UTC
I've set up a SNB system with KDE and TearFree. Anything I need to configure for KDE (desktop effects?)? Do I need to perform a certain sequence of steps to see the corruption?
Comment 7 FBrown 2013-07-20 20:19:21 UTC
(In reply to comment #6)
> I've set up a SNB system with KDE and TearFree. Anything I need to configure
> for KDE (desktop effects?)? Do I need to perform a certain sequence of steps
> to see the corruption?

Not that I can determine. Just install and run dropbox so the tray icon loads.

Have tried with desktop effects/compositing enabled and completely disabled on login, switching window manager, icon/desktop themes etc. Reproduces every time.

Running up to date KDE 4.10.5.

Does not seem to occur on xfce4.
Comment 8 Chris Wilson 2013-07-20 21:05:44 UTC
Please try:

commit 2c78403cb56841f342692b97bb53e995c3ff6b9f
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Jul 20 21:55:16 2013 +0100

    sna: Remember to apply drawable offsets for composite memcpy
    
    Yet another missing chunk from
    commit 6921abd81017c9ed7f3b2413784068fbc609a0ea
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Thu Jul 18 16:21:27 2013 +0100
    
        sna: Add a fast path for the most common fallback for CPU-CPU blits
    
    I had the composite offsets, but not the normal window offsets!
    
    Reported-by: F.Brown <francisbrwn9@gmail.com>
    Reported-by: Jiri Slaby <jirislaby@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=67124
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=67064
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 9 FBrown 2013-07-20 21:17:38 UTC
(In reply to comment #8)
> Please try:
> 
> commit 2c78403cb56841f342692b97bb53e995c3ff6b9f
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Sat Jul 20 21:55:16 2013 +0100
> 
> sna: Remember to apply drawable offsets for composite memcpy

That seems to have resolved the issue. Thanks.
Comment 10 Chris Wilson 2013-07-20 21:41:01 UTC
Thanks for the report and testing. Fingers crossed that there are not any more lucking issues in that commit!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.