sna: Remember to apply drawable offsets for composite memcpy

Yet another missing chunk from
commit 6921abd81017c9ed7f3b2413784068fbc609a0ea
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jul 18 16:21:27 2013 +0100

    sna: Add a fast path for the most common fallback for CPU-CPU blits

I had the composite offsets, but not the normal window offsets!

Reported-by: F.Brown <francisbrwn9@gmail.com>
Reported-by: Jiri Slaby <jirislaby@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=67124
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=67064
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>